fixed footer so appears at bottom without extra space, added m-queries for the footer position words

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html{
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
+	height: 100%;
 }
 
 *, *::before, *::after{
@@ -25,6 +26,7 @@ main{
 body{
 	overflow-x:hidden;
 	margin: 0;
+	height: 100%;
 }
 header{
 	margin-bottom: 2em;
@@ -84,6 +86,7 @@ p{
 .profile-buttons{
 	width: 100%;
 	padding-top: 3em;
+	overflow: hidden;
 }
 
 
@@ -105,9 +108,13 @@ p{
 footer{
 	background-color: #ff786c;
 	clear: left;
-	margin-top: 3em;
+	margin-top: 8rem;
+	clear: both;
+	padding: 1em 0;
 }
-
+footer p{
+	padding: 0 0 0 1em;
+}
 
 
 @media only screen and (min-width: 25.125em) {
@@ -156,6 +163,9 @@ footer{
 	.main-text{
 		padding-top: 3em;
 	}
+	footer p{
+		padding: 0;
+	}
 }
 
 @media only screen and (min-width: 48em) {
@@ -186,12 +196,15 @@ footer{
 		font-size: 110%;
 		line-height: 1.4;
 	}
+	footer p{
+		padding: 1rem 12%;
+	}
 	footer{
-		padding: 0 12%;
+		padding: 0;
 	}
 }
 
-@media only screen and (min-width: 65em) {
+@media only screen and (min-width: 68em) {
 	header{
 		padding: 2rem 23%;
 	}
@@ -213,6 +226,9 @@ footer{
 	.main-text{
 		padding-top: 3em;
 	}
+	footer p{
+		padding: 1rem 23%;
+	}
 }
 
 @media only screen and (min-width: 95em) {
@@ -224,14 +240,14 @@ footer{
 		padding-right: 22%;
 	}
 	.header-words{
-		padding-top: 2.5em;
+		padding-top: 0;
 		width: 75%;
 	}
 	h1{
-		font-size: 5.03rem;
+		font-size: 4.73rem;
 	}
 	h2{
-		font-size: 8.139rem;
+		font-size: 7.639rem;
 	}
 	.profile-buttons{
 		width: 50%;
@@ -255,6 +271,15 @@ footer{
 	html{
 		font-size: 120%;
 		line-height: 1.5;
+	}
+	footer p{
+		padding: 0;
+		padding-left: 15%;
+	}
+	footer{
+		margin-left: 0;
+		margin-right: 0;
+		padding: 1rem 0;
 	}
 }
 
